--- a/roles/proxy/templates/docker-compose.yml
+++ b/roles/proxy/templates/docker-compose.yml
@@ -101,12 +101,12 @@ services:
       {{ network_names.discovery }}:
     {{ ds.deploy_section()|indent(width = 4) }}
       labels:
-        {{ tf.enable(service_name)|indent(width = 6) }}
+        {{ tf.enable(service_name)|indent(width = 8) }}
         {{ tf.use_letsencrypt(service_name) }}
         {{ tf.service_port(service_name, 9091) }}
         - "traefik.http.routers.{{ service_name }}.rule=Host(`{{ dns_sub_domains.login }}`)"
 
-        - "traefik.http.middlewares.{{ service_name }}.forwardauth.address=http://authelia:9091/api/verify?rd=https://{{ dns_sub_domains.login }}/"
+        - "traefik.http.middlewares.{{ service_name }}.forwardauth.address=http://{{ stack_names.proxy }}_authelia:9091/api/verify?rd=https://{{ dns_sub_domains.login }}/"
         - "traefik.http.middlewares.{{ service_name }}.forwardauth.trustForwardHeader=true"
         - "traefik.http.middlewares.{{ service_name }}.forwardauth.authResponseHeaders=Remote-User,Remote-Groups,X-Forwarded-User"
 
