--- a/roles/maintenance/templates/netdata.yml
+++ b/roles/maintenance/templates/netdata.yml
@@ -1,12 +1,10 @@
 {% import 'docker/volumes.jinja2' as dv with context -%}
 {% import 'docker/network.jinja2' as dn with context -%}
-{% import 'docker/misc.jinja2' as dm with context -%}
+{% import 'docker/swarm.jinja2' as ds with context -%}
 {% import 'traefik/http.jinja2' as traefik with context -%}
 
 netdata:
-  container_name: {{ netdata.name }}
   image: netdata/netdata:latest
-  hostname: pihole.home
   cap_add:
     - SYS_PTRACE
   security_opt:
@@ -18,8 +16,11 @@ netdata:
     - /proc:/host/proc:ro
     - /sys:/host/sys:ro
     {{ dv.datetime_mapping()|indent(width = 4) }}
-
-  {{ traefik.declare_labels_mount_path_internal("netdata", "/netdata")|indent(width = 2) }}
+  {{ dn.map_ports([ (19999,) ])|indent(width = 2) }}
   {{ dn.discovery_network_section()|indent(width = 2) }}
     {{ network_names.datastore }}:
-  {{ dm.common()|indent(width = 2) }}
+  deploy:
+    mode: global
+    {{ ds.common()|indent(width = 4) }}
+{# data collection is local to a single machine, it does not make sense to put them all behind a load balancer #}
+{#  {{ traefik.declare_labels_mount_path_internal("netdata", "/netdata", 19999)|indent(width = 4) }} #}
