--- a/roles/maintenance/templates/backup.yml
+++ b/roles/maintenance/templates/backup.yml
@@ -2,7 +2,7 @@
 
 {% import 'docker/volumes.jinja2' as dv with context -%}
 {% import 'docker/network.jinja2' as dn with context -%}
-{% import 'docker/misc.jinja2' as dm with context -%}
+{% import 'docker/swarm.jinja2' as ds with context -%}
 {% import 'traefik/http.jinja2' as traefik with context -%}
 
 {%- set vols = [
@@ -11,7 +11,6 @@
 ] -%}
 
 duplicati:
-  container_name: duplicati
   hostname: duplicati
   image: linuxserver/duplicati:latest
   environment:
@@ -19,11 +18,10 @@ duplicati:
     PGID: 0 # ding dong root bad
     TZ: {{ timezone }}
     CLI_ARGS: --restore-permissions=true
-
-  {{ traefik.declare_labels_mount_path_internal("backup", "/backup")|indent(width = 2) }}
 {#{{ dn.map_ports([ (8200,) ])|indent(width = 4) }} #}
   {{ dv.volumes_section_complete(vols)|indent(width = 2) }}
     {{ dv.mount_docker_socket() }}
   {{ dn.discovery_network_section()|indent(width = 2) }}
     {{ network_names.datastore }}:
-  {{ dm.common()|indent(width = 2) }}
+  {{ ds.deploy_section()|indent(width = 2) }}
+    {{ traefik.declare_labels_mount_path_internal("backup", "/backup", 8200)|indent(width = 4) }}
