--- a/roles/maintenance/templates/container_management.yml
+++ b/roles/maintenance/templates/container_management.yml
@@ -1,17 +1,16 @@
 {% import 'docker/volumes.jinja2' as dv with context -%}
 {% import 'docker/network.jinja2' as dn with context -%}
-{% import 'docker/misc.jinja2' as dm with context -%}
+{% import 'docker/swarm.jinja2' as ds with context -%}
 {% import 'traefik/http.jinja2' as traefik with context -%}
 
 portainer:
-  container_name: portainer
   hostname: portainer
   image: portainer/portainer:latest
   command:
     - "--no-auth"
-
-  {{ traefik.declare_labels_mount_path_internal("portainer", "/portainer")|indent(width = 2) }}
   {{ dv.volumes_section_complete([ portainer.volumes.data ])|indent(width = 2) }}
     - /var/run/docker.sock:/var/run/docker.sock
   {{ dn.discovery_network_section()|indent(width = 2) }}
-  {{ dm.common()|indent(width = 2) }}
+  {{ ds.deploy_section()|indent(width = 2) }}
+    {{ traefik.declare_labels_mount_path_internal("portainer", "/portainer", 9000)|indent(width = 4) }}
+    {{ ds.placement_run_manager_section()|indent(width = 4) }}
