--- a/inventory_prod.ini
+++ b/inventory_prod.ini
@@ -1,5 +1,5 @@
 [all]
-realmar-rpi4 ansible_host=192.168.1.128 ansible_ssh_user=root
+realmar-rpi4 ansible_host=192.168.1.128 ansible_ssh_user=root ansible_python_interpreter=/usr/bin/python3
 
 [production]
 realmar-rpi4
