use python3 for dev

--- a/inventory_dev.ini
+++ b/inventory_dev.ini
@@ -1,5 +1,5 @@
 [all]
-pihole-dev ansible_host=192.168.250.102 ansible_ssh_user=root
+pihole-dev ansible_host=192.168.250.102 ansible_ssh_user=root ansible_python_interpreter=/usr/bin/python3
 
 [development]
 pihole-dev
