--- a/roles/matrix_server/templates/turnserver.conf
+++ b/roles/matrix_server/templates/turnserver.conf
@@ -34,9 +34,10 @@ tls-listening-port=5349
 min-port=49152
 max-port=65535
 
+# Do I need this?
 # denied-peer-ip=10.0.0.0-10.255.255.255
-denied-peer-ip=192.168.0.0-192.168.255.255
-denied-peer-ip=172.16.0.0-172.31.255.255
+# denied-peer-ip=192.168.0.0-192.168.255.255
+# denied-peer-ip=172.16.0.0-172.31.255.255
 
 no-loopback-peers
 no-multicast-peers
@@ -62,5 +63,5 @@ dh2066
 no-tlsv1
 no-tlsv1_1
 
-pkey=/opt/certificates/realmar.net.pem
-cert=/opt/certificates/realmar.net.crt
+pkey={{ global_cert_dir }}realmar.net.pem
+cert={{ global_cert_dir }}realmar.net.crt
