Add matrix/client to .well-known

--- a/roles/matrix_server/tasks/main.yml
+++ b/roles/matrix_server/tasks/main.yml
@@ -38,6 +38,7 @@
     - init_db.sql
     - turnserver.conf
     - well-known_server.json
+    - well-known_client.json
   tags:
     - matrix_server_config
     - matrix_server_config2
