Route among us server through traefik

--- a/03_run_dogger.yml
+++ b/03_run_dogger.yml
@@ -32,13 +32,13 @@
         - "{{ root_dirs.rss }}"
         - "{{ root_dirs.jupyter }}"
         - "{{ root_dirs.personal_website }}"
-        - "{{ root_dirs.zhaw_iot1 }}"
+        #- "{{ root_dirs.zhaw_iot1 }}"
 
     - name: Running command
       shell: "{{ command }}"
       args:
         chdir: "{{ item }}"
       with_items:
-        #- "{{ root_dirs.discord }}"
+        - "{{ root_dirs.discord }}"
         - "{{ root_dirs.matrix_server }}"
       when: not is_dev
